<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="buy_pro_advantage">"購買Pro版您將獲得:
●9個以上的支出按鈕
●備份 &amp; 還原記錄功能"</string>
    <string name="app_name">閃電記帳</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity2</string>
    <string name="storing_successful">儲存成功!</string>
    <string name="storing_failed">儲存出了問題...</string>
    <string name="input_activity_backspace">←</string>
    <string name="summary">總結</string>
    <string name="report">總結</string>
    <string name="total">總結</string>
    <string name="delete_dialog_title">刪除記錄</string>
    <string name="delete_dialog_are_you_sure">您確定要刪除這筆資料?</string>
    <string name="delete_dialog_category">類別</string>
    <string name="delete_dialog_time">時間</string>
    <string name="delete_dialog_amount">金額</string>
    <string name="menu_item_edit_categories">編輯/刪除類別</string>
    <string name="menu_item_change_theme_color">選擇主題顏色</string>
    <string name="menu_item_rate_and_review">評分 &amp; 提供意見</string>
    <string name="backup_and_restore">備份 &amp; 還原記錄</string>
    <string name="default_category_1">飲食</string>
    <string name="default_category_2">交通</string>
    <string name="plus_sign">+</string>
    <string name="add_new_category">新增支出類別</string>
    <string name="edit_and_remove_category">編輯/刪除類別</string>
    <string name="finish">完成</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="all_categories">所有紀錄</string>
    <string name="edit_categories">編輯/刪除類別</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="delete_category">刪除類別</string>
    <string name="category_name">類別名稱</string>
    <string name="edit_name">編輯名稱</string>
    <string name="reset_categories">重設類別</string>
    <string name="are_you_sure_to_reset_categories">您確定要重設所有類別?</string>
    <string name="are_you_sure_to_delete_category">您確定要刪除類別?</string>
    <string name="confirm">確定</string>
    <string name="monthly_budget">本月預算</string>
    <string name="monthly_expense">本月支出</string>
    <string name="monthly_balance">本月結餘</string>
    <string name="today_expense">今天支出</string>
    <string name="weekly_expense">本週支出</string>
    <string name="latest_record">最新紀錄</string>
    <string name="set_monthly_budget">設定本月預算</string>
    <string name="switch_expense_category">切換清單類別</string>
    <string name="current_monthly_budget">目前預算:</string>
    <string name="menu_option">選項</string>
    <string name="list_type">清單類別:</string>
    <string name="categories">類別</string>
    <string name="delete_record">刪除記錄</string>
    <string name="edit_memo">編輯 Memo</string>
    <string name="edit_category_dialog_text">編輯類別</string>
    <string name="edit_amount">編輯金額</string>
    <string name="add_memo_q">增加 Memo?</string>
    <string name="record_detail">記錄細節</string>
    <string name="none">無</string>
    <string name="choose_theme_color">選擇主題顏色</string>
    <string name="theme">主題顏色</string>
    <string name="add_income">新增收入</string>
    <string name="select_date">選擇日期</string>
    <string name="date">日期</string>
    <string name="now">現在</string>
    <string name="today">今天</string>
    <string name="monthly_income">本月收入</string>
    <string name="record_list">本月紀錄</string>
    <string name="category_total">類別總結</string>
    <string name="no_data">無資料</string>
    <string name="click_pie_to_see_info">點選圖表以查看細節</string>
    <string name="theme_1">酷藍</string>
    <string name="theme_2">黑與白</string>
    <string name="theme_3">黑色櫻桃</string>
    <string name="app_setting">App 設定</string>
    <string name="setting_show_memo_dialog">要求輸入Memo</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="balance">總結</string>
</resources>
