<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:background="@color/theme_yellow_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/button_edit_category" android:background="@drawable/main_menu_button_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginBottom="1.0dip">
        <ImageView android:id="@id/icon_iv" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_edit_caterogy" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="left|center" android:id="@id/button_text" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/menu_item_edit_categories" android:layout_toRightOf="@id/icon_iv" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_app_setting" android:background="@drawable/main_menu_button_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginBottom="1.0dip">
        <ImageView android:id="@id/icon_iv" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_gear" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="left|center" android:id="@id/button_text" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/app_setting" android:layout_toRightOf="@id/icon_iv" />
        <ImageView android:id="@id/new_badge_iv" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_red_new" android:scaleType="fitXY" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_backup" android:background="@drawable/main_menu_button_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginBottom="1.0dip">
        <ImageView android:id="@id/icon_iv" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_sync" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="left|center" android:id="@id/button_text" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/backup_and_restore" android:layout_toRightOf="@id/icon_iv" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_share" android:background="@drawable/main_menu_button_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginBottom="1.0dip">
        <ImageView android:id="@id/icon_iv" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_share" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="left|center" android:id="@id/button_text" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="分享這個App" android:layout_toRightOf="@id/icon_iv" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_rate_review" android:background="@drawable/main_menu_button_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginBottom="1.0dip">
        <ImageView android:id="@id/icon_iv" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/icon_smiley" />
        <TextView android:textSize="16.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="left|center" android:id="@id/button_text" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/menu_item_rate_and_review" android:layout_toRightOf="@id/icon_iv" />
    </RelativeLayout>
</LinearLayout>
