<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/fundation_layout" android:background="@color/theme_yellow_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_bar" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <ImageButton android:id="@id/pie_chart_button" android:background="@drawable/theme_yellow_button_bg_selector" android:padding="8.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/pie_chart_icon" android:scaleType="fitXY" android:cropToPadding="true" android:layout_alignParentRight="true" />
        <ImageButton android:id="@id/next_button_image_view" android:background="@drawable/theme_yellow_button_bg_selector" android:padding="8.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/right_tri" android:scaleType="centerCrop" android:layout_toLeftOf="@id/pie_chart_button" />
        <ImageButton android:id="@id/prev_button_image_view" android:background="@drawable/theme_yellow_button_bg_selector" android:padding="8.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/left_tri" android:scaleType="centerCrop" android:layout_toLeftOf="@id/next_button_image_view" />
        <TextView android:textSize="25.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="center" android:id="@id/title_text_tv" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_toLeftOf="@id/prev_button_image_view" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/top_bar">
        <RelativeLayout android:id="@id/top_box" android:background="@drawable/detail_report_box_bg_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <TextView android:textSize="15.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="center" android:id="@id/label_1" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/expense" android:layout_alignParentLeft="true" />
            <TextView android:textSize="20.0sp" android:textColor="@color/theme_yellow_expense_text_red" android:gravity="center" android:id="@id/expense_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/label_1" />
            <TextView android:textSize="15.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="center" android:id="@id/label_2" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/income" android:layout_below="@id/expense_tv" android:layout_alignParentLeft="true" />
            <TextView android:textSize="20.0sp" android:textColor="@color/theme_yellow_income_text_dark_green" android:gravity="center" android:id="@id/income_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/label_2" />
            <TextView android:textSize="15.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="center" android:id="@id/label_3" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/balance" android:layout_below="@id/income_tv" android:layout_alignParentLeft="true" />
            <TextView android:textSize="20.0sp" android:textColor="@color/genaral_color_black" android:gravity="center" android:id="@id/balance_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/label_3" />
        </RelativeLayout>
        <ListView android:id="@id/report_list_view" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent" android:divider="@android:color/transparent" android:dividerHeight="5.0dip" android:layout_below="@id/top_box" android:footerDividersEnabled="true" android:overScrollMode="never" />
        <TextView android:textSize="15.0sp" android:textColor="@color/theme_yellow_text_color" android:gravity="center" android:id="@id/no_record_tv" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="無記錄" android:layout_below="@id/top_box" />
    </RelativeLayout>
</RelativeLayout>
